update table style

--- a/source/css/_common/_core/tables.styl
+++ b/source/css/_common/_core/tables.styl
@@ -1,5 +1,6 @@
 table {
   width: $table-width;
+  margin: 20px 0;
   border-collapse: collapse;
   border-spacing: 0;
   border: 1px solid $table-border-color;
@@ -26,5 +27,5 @@ th {
   padding-bottom: 10px;
   font-weight: $table-th-font-weight;
 }
-  
+
 td { border-bottom-width: 1px; }
