--- a/source/css/_variables/base.styl
+++ b/source/css/_variables/base.styl
@@ -96,7 +96,7 @@ $table-content-alignment        = left
 $table-content-vertical         = middle
 $table-th-font-weight           = 700
 $table-cell-padding             = 8px
-$table-cell-border-right-color  = $primarycolor
+$table-cell-border-right-color  = $gray-lighter
 $table-cell-border-bottom-color = $gray-lighter
 $table-row-odd-bg-color         = $primarycolor
 $table-row-hover-bg-color       = #f9f9f9
