--- a/source/css/_custom/custom.styl
+++ b/source/css/_custom/custom.styl
@@ -29,3 +29,17 @@
 .posts-expand .post-body .fancybox img {
 	margin: 0 auto;
 }
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
