--- a/source/css/_common/_core/base.styl
+++ b/source/css/_common/_core/base.styl
@@ -19,16 +19,16 @@ hr {
 }
 
 blockquote {
-  background: #F8F5F2;
+  background: #FFFFFF;
   font-size 0.9em;
   padding-top: 25px;
   padding-bottom: 1px;
-  padding-left: 20px;
-  padding-right: 30px;
+  padding-left: 15px;
+  padding-right: 20px;
   color: $grey-dim;
-  border-left: 10px solid $gray-lighter;
-  border-radius: .3em
-  margin: 10px 0 10px 0
+  border-left: 5px solid $gray-lighter;
+  border-radius: .2em
+  margin: 10px 30px 10px 30px
   line-height: 160%;
 
   cite::before {
